--- a/public/kanbas/courses/courses.html
+++ b/public/kanbas/courses/courses.html
@@ -9,119 +9,150 @@
     <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="../KanbasNavigation/kanbasNavigation.css" />
     <link rel="stylesheet" href="../account/account.css" />
+    <link rel="stylesheet" href="../assignments/index.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="wd-kanbas-navigation">
-          <ul class="list-group">
-            <li class="list-group-item account">
-              <a href="../account/account.html">
-                <i class="fas fa-user-circle"></i>
-                Account
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="../dashboard/dashboard.html">
-                <i class="fas fa-tachometer-alt"></i>
-                Dashboard
-              </a>
-            </li>
-            <li class="list-group-item active">
-              <a href="#">
-                <i class="fas fa-book"></i>
-                Courses
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-calendar-week"></i>
-                Calender
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-inbox"></i>
-                Inbox
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-clock"></i>
-                History
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fab fa-octopus-deploy"></i>
-                Studio
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-arrow-right"></i>
-                Commons
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-question-circle"></i>
-                Help
-              </a>
-            </li>
-          </ul>
+    <div class="wd-kanbas-navigation">
+      <ul class="list-group border-0 text-center align-items-center">
+        <li>
+          <img
+            src="../../img/neu_logo.png"
+            width="80"
+            alt="Northeastern Uni. Logo"
+          />
+        </li>
+        <li class="list-group-item account">
+          <a href="../account/account.html">
+            <i class="fas fa-user-circle"></i>Account</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="../dashboard/dashboard.html">
+            <i class="fas fa-tachometer-alt"></i>Dashboard</a
+          >
+        </li>
+        <li class="list-group-item active">
+          <a href="../courses/courses.html">
+            <i class="fas fa-book"></i>
+            Courses
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-calendar-week"></i>
+            Calender
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-inbox"></i>
+            Inbox
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-clock"></i>
+            History
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fab fa-octopus-deploy"></i>
+            Studio
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-arrow-right"></i>
+            Commons
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-question-circle"></i><br />
+            Help
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="row wd-margin-80">
+      <div class="col wd-assignments">
+        <div class="row">
+          <div class="col-1 d-flex align-items-center align">
+            <i class="fas fa-grip-lines mx-1 wd-red-color wd-font-size-20"></i>
+          </div>
+          <div class="col d-flex align-items-center align">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb mt-3">
+                <li class="breadcrumb-item active" aria-current="page">
+                  Courses
+                </li>
+              </ol>
+            </nav>
+          </div>
         </div>
-        <div class="wd-account-navigation">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <a href="#">Home</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Piazza</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Zoom Meetings</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Modules</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Quizzes</a>
-            </li>
-            <li class="list-group-item">
-              <a href="../assignments/index.html">Assignments</a>
-            </li>
-            <li class="list-group-item">
-              <a href="../grades/index.html">Grades</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">People</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Microsoft Teams Meetings</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">FACT Reporting and Photo Roster</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Discussions</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Announcements</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Pages</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Files</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Rubrics</a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">Outcomes</a>
-            </li>
-          </ul>
+        <div class="row">
+          <div class="col">
+            <hr />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-2 px-0">
+            <div class="wd-account-navigation">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <a href="../home/index.html">Home</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Piazza</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Zoom Meetings</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Modules</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Quizzes</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="../assignments/index.html">Assignments</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="../grades/index.html">Grades</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">People</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Microsoft Teams Meetings</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">FACT Reporting and Photo Roster</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Discussions</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Announcements</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Pages</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Files</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Rubrics</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="#">Outcomes</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
