--- a/public/kanbas/KanbasNavigation/kanbasNavigation.html
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.html
@@ -10,67 +10,68 @@
     <link rel="stylesheet" href="kanbasNavigation.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col wd-kanbas-navigation">
-          <ul class="list-group">
-            <li class="list-group-item account">
-              <a href="../account/account.html">
-                <i class="fas fa-user-circle"></i>
-                Account
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="../dashboard/dashboard.html">
-                <i class="fas fa-tachometer-alt"></i>
-                Dashboard
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="../courses/courses.html">
-                <i class="fas fa-book"></i>
-                Courses
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-calendar-week"></i>
-                Calender
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-inbox"></i>
-                Inbox
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-clock"></i>
-                History
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fab fa-octopus-deploy"></i>
-                Studio
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-arrow-right"></i>
-                Commons
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-question-circle"></i>
-                Help
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <div class="col wd-kanbas-navigation">
+      <ul class="list-group border-0 text-center align-items-center">
+        <li>
+          <img
+            src="../../img/neu_logo.png"
+            width="80"
+            alt="Northeastern Uni. Logo"
+          />
+        </li>
+        <li class="list-group-item account">
+          <a href="../account/account.html">
+            <i class="fas fa-user-circle"></i>Account</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="../dashboard/dashboard.html">
+            <i class="fas fa-tachometer-alt"></i>Dashboard</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="../courses/courses.html">
+            <i class="fas fa-book"></i>
+            Courses
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-calendar-week"></i>
+            Calender
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-inbox"></i>
+            Inbox
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-clock"></i>
+            History
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fab fa-octopus-deploy"></i>
+            Studio
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-arrow-right"></i>
+            Commons
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-question-circle"></i><br />
+            Help
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
