--- a/public/kanbas/account/account.html
+++ b/public/kanbas/account/account.html
@@ -12,106 +12,115 @@
     <link rel="stylesheet" href="account.css" />
   </head>
   <body>
-    <div class="wd-kanbas-navigation">
-      <ul class="list-group border-0 text-center align-items-center">
-        <li>
-          <img
-            src="../../img/neu_logo.png"
-            width="80"
-            alt="Northeastern Uni. Logo"
-          />
-        </li>
-        <li class="list-group-item account active">
-          <a href="account.html"> <i class="fas fa-user-circle"></i>Account</a>
-        </li>
-        <li class="list-group-item">
-          <a href="../dashboard/dashboard.html">
-            <i class="fas fa-tachometer-alt"></i>Dashboard</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../courses/courses.html">
-            <i class="fas fa-book"></i>
-            Courses
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-calendar-week"></i>
-            Calender
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-inbox"></i>
-            Inbox
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-clock"></i>
-            History
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fab fa-octopus-deploy"></i>
-            Studio
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-arrow-right"></i>
-            Commons
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-question-circle"></i><br />
-            Help
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="row wd-margin-80">
-      <div class="col wd-assignments">
-        <div class="row">
-          <div class="col-2 px-0">
-            <div class="wd-account-navigation">
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <a href="#">Notifications</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="../profile/index.html">Profile</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">Files</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">Settings</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">ePortfolios</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">Shared Content</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">The Hub</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">Qwickly Course Tools</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="#">Global Announcements</a>
-                </li>
-              </ul>
+    <body>
+      <div class="row">
+        <div class="col-md-1 d-none d-md-block" style="width: 80px">
+          <div class="wd-kanbas-navigation">
+            <ul class="list-group border-0 text-center align-items-center">
+              <li>
+                <img
+                  src="../../img/neu_logo.png"
+                  width="80"
+                  alt="Northeastern Uni. Logo"
+                />
+              </li>
+              <li class="list-group-item account active">
+                <a href="../account/account.html">
+                  <i class="fas fa-user-circle"></i>Account</a
+                >
+              </li>
+              <li class="list-group-item">
+                <a href="../dashboard/dashboard.html">
+                  <i class="fas fa-tachometer-alt"></i>Dashboard</a
+                >
+              </li>
+              <li class="list-group-item">
+                <a href="../courses/courses.html">
+                  <i class="fas fa-book"></i>
+                  Courses
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fas fa-calendar-week"></i>
+                  Calender
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fas fa-inbox"></i>
+                  Inbox
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="far fa-clock"></i>
+                  History
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fab fa-octopus-deploy"></i>
+                  Studio
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fas fa-arrow-right"></i>
+                  Commons
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="far fa-question-circle"></i><br />
+                  Help
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col wd-assignments">
+              <div class="row">
+                <div class="col-2">
+                  <div class="wd-account-navigation">
+                    <ul class="list-group">
+                      <li class="list-group-item">
+                        <a href="#">Notifications</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="../profile/index.html">Profile</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">Files</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">Settings</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">ePortfolios</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">Shared Content</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">The Hub</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">Qwickly Course Tools</a>
+                      </li>
+                      <li class="list-group-item">
+                        <a href="#">Global Announcements</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </body>
   </body>
 </html>
