--- a/public/kanbas/dashboard/dashboard.html
+++ b/public/kanbas/dashboard/dashboard.html
@@ -12,209 +12,214 @@
     <link rel="stylesheet" href="dashboard.css" />
   </head>
   <body>
-    <div class="wd-kanbas-navigation">
-      <ul class="list-group border-0 text-center align-items-center">
-        <li>
-          <img
-            src="../../img/neu_logo.png"
-            width="80"
-            alt="Northeastern Uni. Logo"
-          />
-        </li>
-        <li class="list-group-item account">
-          <a href="../account/account.html">
-            <i class="fas fa-user-circle"></i>Account</a
-          >
-        </li>
-        <li class="list-group-item active">
-          <a href="dashboard.html">
-            <i class="fas fa-tachometer-alt"></i>Dashboard</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../courses/courses.html">
-            <i class="fas fa-book"></i>
-            Courses
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-calendar-week"></i>
-            Calender
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-inbox"></i>
-            Inbox
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-clock"></i>
-            History
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fab fa-octopus-deploy"></i>
-            Studio
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-arrow-right"></i>
-            Commons
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-question-circle"></i><br />
-            Help
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="row wd-margin-80">
-      <div class="col wd-assignments">
-        <div class="row">
-          <h1 class="mt-3 mx-2">Dashboard</h1>
+    <div class="row">
+      <div class="col-md-1 d-none d-md-block" style="width: 80px">
+        <div class="wd-kanbas-navigation">
+          <ul class="list-group border-0 text-center align-items-center">
+            <li>
+              <img
+                src="../../img/neu_logo.png"
+                width="80"
+                alt="Northeastern Uni. Logo"
+              />
+            </li>
+            <li class="list-group-item account">
+              <a href="../account/account.html">
+                <i class="fas fa-user-circle"></i>Account</a
+              >
+            </li>
+            <li class="list-group-item active">
+              <a href="../dashboard/dashboard.html">
+                <i class="fas fa-tachometer-alt"></i>Dashboard</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a href="../courses/courses.html">
+                <i class="fas fa-book"></i>
+                Courses
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-calendar-week"></i>
+                Calender
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-inbox"></i>
+                Inbox
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-clock"></i>
+                History
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fab fa-octopus-deploy"></i>
+                Studio
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-arrow-right"></i>
+                Commons
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-question-circle"></i><br />
+                Help
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="col">
         <div class="row">
-          <div class="col">
-            <hr />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col mx-3">
-            <h3>Published Courses(7)</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col mx-3">
-            <hr />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col mx-3">
-            <div class="wd-courses row row-cols-1 row-cols-4">
+          <div class="col wd-assignments">
+            <div class="row">
+              <h1 class="mt-3 mx-2">Dashboard</h1>
+            </div>
+            <div class="row">
               <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
-                  </div>
-                </div>
+                <hr />
               </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
-                  </div>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col mx-3">
+                <h3>Published Courses(7)</h3>
               </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
-                  </div>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col mx-3">
+                <hr />
               </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
+            </div>
+            <div class="row">
+              <div class="col mx-3">
+                <div class="wd-courses row row-cols-1 row-cols-4">
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <img
-                    class="card-img-top"
-                    src="../../img/course_img.jpeg"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">CS4550 19753 Web Development</h5>
-                    <p class="card-text mb-1 text-secondary">
-                      CS4550.19753.202410<br />
-                      202410_1 Fall 2023 Semester Full Term
-                    </p>
-                    <i class="far fa-edit"></i>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img
+                        class="card-img-top"
+                        src="../../img/course_img.jpeg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">CS4550 19753 Web Development</h5>
+                        <p class="card-text mb-1 text-secondary">
+                          CS4550.19753.202410<br />
+                          202410_1 Fall 2023 Semester Full Term
+                        </p>
+                        <i class="far fa-edit"></i>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
