--- a/public/kanbas/home/index.html
+++ b/public/kanbas/home/index.html
@@ -87,14 +87,14 @@
                 class="col-lg-1 col-md-2 d-none d-md-block d-flex align-items-center align"
               >
                 <i
-                  class="fas fa-grip-lines mx-1 wd-red-color wd-font-size-20"
+                  class="fas fa-grip-lines px-4 pt-4 wd-red-color wd-font-size-20"
                 ></i>
               </div>
               <div
-                class="col-lg-9 col-md-7 d-none d-md-block d-flex align-items-center align"
+                class="col-lg-9 col-md-6 d-none d-md-block d-flex align-items-center align"
               >
                 <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb mt-3">
+                  <ol class="breadcrumb pt-3">
                     <li class="breadcrumb-item">
                       <span class="wd-red-color">CS4550.12631.202410 </span>
                     </li>
@@ -104,8 +104,8 @@
                   </ol>
                 </nav>
               </div>
-              <div class="col-lg-2 col-md-3 d-none d-md-block">
-                <div class="float-end mt-3 mb-3">
+              <div class="col-lg-2 col-md-4 d-none d-md-block">
+                <div class="float-end p-3">
                   <button type="submit" class="btn btn-light">
                     <i class="fas fa-glasses"></i>
                     Student View
