--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -13,223 +13,236 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="wd-kanbas-navigation">
-      <ul class="list-group border-0 text-center align-items-center">
-        <li>
-          <img
-            src="../../img/neu_logo.png"
-            width="80"
-            alt="Northeastern Uni. Logo"
-          />
-        </li>
-        <li class="list-group-item account active">
-          <a href="../account/account.html">
-            <i class="fas fa-user-circle"></i>Account</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../dashboard/dashboard.html">
-            <i class="fas fa-tachometer-alt"></i>Dashboard</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../courses/courses.html">
-            <i class="fas fa-book"></i>
-            Courses
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-calendar-week"></i>
-            Calender
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-inbox"></i>
-            Inbox
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-clock"></i>
-            History
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fab fa-octopus-deploy"></i>
-            Studio
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-arrow-right"></i>
-            Commons
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-question-circle"></i><br />
-            Help
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="row wd-margin-80">
-      <div class="col wd-assignments">
-        <div class="row pt-3">
-          <div class="col-1 d-flex align-items-center align">
-            <i class="fas fa-grip-lines mx-1 wd-red-color wd-font-size-20"></i>
-          </div>
-          <div class="col d-flex align-items-center align">
-            <h3>Alina Geng's Profile</h3>
-          </div>
+    <div class="row">
+      <div class="col-md-1 d-none d-md-block" style="width: 80px">
+        <div class="wd-kanbas-navigation">
+          <ul class="list-group border-0 text-center align-items-center">
+            <li>
+              <img
+                src="../../img/neu_logo.png"
+                width="80"
+                alt="Northeastern Uni. Logo"
+              />
+            </li>
+            <li class="list-group-item account active">
+              <a href="../account/account.html">
+                <i class="fas fa-user-circle"></i>Account</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a href="../dashboard/dashboard.html">
+                <i class="fas fa-tachometer-alt"></i>Dashboard</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a href="../courses/courses.html">
+                <i class="fas fa-book"></i>
+                Courses
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-calendar-week"></i>
+                Calender
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-inbox"></i>
+                Inbox
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-clock"></i>
+                History
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fab fa-octopus-deploy"></i>
+                Studio
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-arrow-right"></i>
+                Commons
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-question-circle"></i><br />
+                Help
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="col">
         <div class="row">
-          <div class="col">
-            <hr />
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-2 px-0">
-            <div class="col wd-account-navigation">
-              <div class="row">
-                <div class="">
-                  <div class="">
-                    <ul class="list-group">
-                      <li class="list-group-item">
-                        <a href="#">Notifications</a>
-                      </li>
-                      <li class="list-group-item active">
-                        <a href="../profile/index.html">Profile</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Files</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Settings</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">ePortfolios</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Shared Content</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">The Hub</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Qwickly Course Tools</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Global Announcements</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
+          <div class="col wd-assignments">
+            <div class="row pt-3">
+              <div class="col-1 d-flex align-items-center align">
+                <i
+                  class="fas fa-grip-lines p-3 wd-red-color wd-font-size-20"
+                ></i>
               </div>
-            </div>
-          </div>
-
-          <div class="col-5 wd-profile-edit">
-            <i class="fas fa-user-circle"></i>
-            <label for="name" class="form-label"> Name:* </label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              placeholder="Alina Geng"
-            />
-
-            <label for="pronouns" class="form-label"> Pronouns: </label>
-            <select class="form-select" for="pronouns">
-              <option selected>None</option>
-            </select>
-
-            <label for="title" class="form-label"> Title: </label>
-            <input type="text" class="form-control" id="tile" />
-
-            <h2>Contact</h2>
-            <p>
-              No registered services, you can add some on the
-              <span>settings</span> page.
-            </p>
-            <div>
-              <label for="biography" class="form-label"
-                ><h2>Biography</h2></label
-              >
-              <textarea class="form-control" id="biography" rows="3">
-    Student</textarea
-              >
-            </div>
-
-            <div class="container">
-              <div class="wd-edit-links row">
-                <h2>Links</h2>
-                <div class="col">
-                  <div class="text-center">
-                    <h4>Title</h4>
-                  </div>
-                  <div class="row">
-                    <div class="col-10 wd-edit-title">
-                      <input type="text" class="form-control" value="YouTube" />
-                    </div>
-                    <div class="col-2 wd-edit-arrow">
-                      <i class="fas fa-arrow-right"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="row text-center">
-                    <h4>URL</h4>
-                  </div>
-                  <div class="row">
-                    <div class="col-10 wd-edit-title">
-                      <input
-                        type="text"
-                        class="form-control"
-                        value="https://www.youtube.com/"
-                      />
-                    </div>
-                    <div class="col-2 wd-edit-x">
-                      <i class="fas fa-times"></i>
-                    </div>
-                  </div>
-                </div>
+              <div class="col d-flex align-items-center align">
+                <h3>Alina Geng's Profile</h3>
               </div>
             </div>
             <div class="row">
               <div class="col">
-                <button type="submit" class="btn btn-light">
-                  Add another link
-                </button>
+                <hr />
               </div>
             </div>
-            <div class="row float-end">
-              <div class="col">
-                <a href="index.html">
-                  <button type="submit" class="btn btn-light">Cancel</button>
-                </a>
-                <a href="index.html">
-                  <button type="submit" class="btn btn-danger">
-                    Save Profile
-                  </button>
-                </a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col">
-            <div class="float-end">
-              <a href="index.html">
-                <button type="submit" class="btn btn-light m-3">
-                  <i class="fas fa-pencil-alt"></i>
-                  Cancel Editing
-                </button>
-              </a>
+            <div class="row">
+              <div class="col-2 px">
+                <div class="col wd-account-navigation">
+                  <div class="row">
+                    <div class="">
+                      <div class="">
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            <a href="#">Notifications</a>
+                          </li>
+                          <li class="list-group-item active">
+                            <a href="../profile/index.html">Profile</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Files</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Settings</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">ePortfolios</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Shared Content</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">The Hub</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Qwickly Course Tools</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Global Announcements</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-5 wd-profile-edit">
+                <i class="fas fa-user-circle"></i>
+                <label for="name" class="form-label"> Name:* </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Alina Geng"
+                />
+
+                <label for="pronouns" class="form-label"> Pronouns: </label>
+                <select class="form-select" for="pronouns">
+                  <option selected>None</option>
+                </select>
+
+                <label for="title" class="form-label"> Title: </label>
+                <input type="text" class="form-control" id="tile" />
+
+                <h2>Contact</h2>
+                <p>
+                  No registered services, you can add some on the
+                  <span>settings</span> page.
+                </p>
+                <div>
+                  <label for="biography" class="form-label"
+                    ><h2>Biography</h2></label
+                  >
+                  <textarea class="form-control" id="biography" rows="3">
+        Student</textarea
+                  >
+                </div>
+
+                <div class="container">
+                  <div class="wd-edit-links row">
+                    <h2>Links</h2>
+                    <div class="col">
+                      <div class="text-center">
+                        <h4>Title</h4>
+                      </div>
+                      <div class="row">
+                        <div class="col-10 wd-edit-title">
+                          <input
+                            type="text"
+                            class="form-control"
+                            value="YouTube"
+                          />
+                        </div>
+                        <div class="col-2 wd-edit-arrow">
+                          <i class="fas fa-arrow-right"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="row text-center">
+                        <h4>URL</h4>
+                      </div>
+                      <div class="row">
+                        <div class="col-10 wd-edit-title">
+                          <input
+                            type="text"
+                            class="form-control"
+                            value="https://www.youtube.com/"
+                          />
+                        </div>
+                        <div class="col-2 wd-edit-x">
+                          <i class="fas fa-times"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button type="submit" class="btn btn-light">
+                      Add another link
+                    </button>
+                  </div>
+                </div>
+                <div class="row float-end">
+                  <div class="col">
+                    <a href="index.html">
+                      <button type="submit" class="btn btn-light">
+                        Cancel
+                      </button>
+                    </a>
+                    <a href="index.html">
+                      <button type="submit" class="btn btn-danger">
+                        Save Profile
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="float-end">
+                  <a href="index.html">
+                    <button type="submit" class="btn btn-light m-3">
+                      <i class="fas fa-pencil-alt"></i>
+                      Cancel Editing
+                    </button>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
