--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -13,152 +13,159 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="wd-kanbas-navigation">
-      <ul class="list-group border-0 text-center align-items-center">
-        <li>
-          <img
-            src="../../img/neu_logo.png"
-            width="80"
-            alt="Northeastern Uni. Logo"
-          />
-        </li>
-        <li class="list-group-item account active">
-          <a href="../account/account.html">
-            <i class="fas fa-user-circle"></i>Account</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../dashboard/dashboard.html">
-            <i class="fas fa-tachometer-alt"></i>Dashboard</a
-          >
-        </li>
-        <li class="list-group-item">
-          <a href="../courses/courses.html">
-            <i class="fas fa-book"></i>
-            Courses
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-calendar-week"></i>
-            Calender
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-inbox"></i>
-            Inbox
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-clock"></i>
-            History
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fab fa-octopus-deploy"></i>
-            Studio
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="fas fa-arrow-right"></i>
-            Commons
-          </a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">
-            <i class="far fa-question-circle"></i><br />
-            Help
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="row wd-margin-80">
-      <div class="col wd-assignments">
-        <div class="row pt-3">
-          <div class="col-1 d-flex align-items-center align">
-            <i class="fas fa-grip-lines mx-1 wd-red-color wd-font-size-20"></i>
-          </div>
-          <div class="col d-flex align-items-center align">
-            <h3>Alina Geng's Profile</h3>
-          </div>
+    <div class="row">
+      <div class="col-md-1 d-none d-md-block" style="width: 80px">
+        <div class="wd-kanbas-navigation">
+          <ul class="list-group border-0 text-center align-items-center">
+            <li>
+              <img
+                src="../../img/neu_logo.png"
+                width="80"
+                alt="Northeastern Uni. Logo"
+              />
+            </li>
+            <li class="list-group-item account active">
+              <a href="../account/account.html">
+                <i class="fas fa-user-circle"></i>Account</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a href="../dashboard/dashboard.html">
+                <i class="fas fa-tachometer-alt"></i>Dashboard</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a href="../courses/courses.html">
+                <i class="fas fa-book"></i>
+                Courses
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-calendar-week"></i>
+                Calender
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-inbox"></i>
+                Inbox
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-clock"></i>
+                History
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fab fa-octopus-deploy"></i>
+                Studio
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-arrow-right"></i>
+                Commons
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-question-circle"></i><br />
+                Help
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="col">
         <div class="row">
-          <div class="col">
-            <hr />
-          </div>
-        </div>
+          <div class="col wd-assignments">
+            <div class="row pt-3">
+              <div class="col-1 d-flex align-items-center align">
+                <i
+                  class="fas fa-grip-lines p-3 wd-red-color wd-font-size-20"
+                ></i>
+              </div>
+              <div class="col d-flex align-items-center align">
+                <h3>Alina Geng's Profile</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <hr />
+              </div>
+            </div>
 
-        <div class="row">
-          <div class="col-2 px-0">
-            <div class="col wd-account-navigation">
-              <div class="row">
-                <div class="">
-                  <div class="">
-                    <ul class="list-group">
-                      <li class="list-group-item">
-                        <a href="#">Notifications</a>
-                      </li>
-                      <li class="list-group-item active">
-                        <a href="../profile/index.html">Profile</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Files</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Settings</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">ePortfolios</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Shared Content</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">The Hub</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Qwickly Course Tools</a>
-                      </li>
-                      <li class="list-group-item">
-                        <a href="#">Global Announcements</a>
-                      </li>
-                    </ul>
+            <div class="row">
+              <div class="col-2">
+                <div class="col wd-account-navigation">
+                  <div class="row">
+                    <div class="">
+                      <div class="">
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            <a href="#">Notifications</a>
+                          </li>
+                          <li class="list-group-item active">
+                            <a href="../profile/index.html">Profile</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Files</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Settings</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">ePortfolios</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Shared Content</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">The Hub</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Qwickly Course Tools</a>
+                          </li>
+                          <li class="list-group-item">
+                            <a href="#">Global Announcements</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
 
-          <div class="col wd-profile mx-3">
-            <i class="fas fa-user-circle"></i>
-            <h1>Alina Geng</h1>
-            <h2>Contact</h2>
-            <p>
-              No registered services, you can add some on the
-              <span>settings</span> page.
-            </p>
-            <h2>Biography</h2>
-            <p>Student</p>
-            <h2>Links</h2>
-            <a href="https://www.youtube.com/">
-              <i class="fas fa-link"></i>
-              YouTube
-            </a>
-          </div>
+              <div class="col wd-profile mx-3">
+                <i class="fas fa-user-circle"></i>
+                <h1>Alina Geng</h1>
+                <h2>Contact</h2>
+                <p>
+                  No registered services, you can add some on the
+                  <span>settings</span> page.
+                </p>
+                <h2>Biography</h2>
+                <p>Student</p>
+                <h2>Links</h2>
+                <a href="https://www.youtube.com/">
+                  <i class="fas fa-link"></i>
+                  YouTube
+                </a>
+              </div>
 
-          <div class="col-2 wd-edit-button float-end">
-            <div class="float-end">
-              <a href="edit.html">
-                <button type="submit" class="btn btn-light">
-                  <i class="fas fa-pencil-alt"></i>
-                  Edit Profile
-                </button>
-              </a>
+              <div class="col-2 wd-edit-button float-end">
+                <div class="float-end">
+                  <a href="edit.html">
+                    <button type="submit" class="btn btn-light">
+                      <i class="fas fa-pencil-alt"></i>
+                      Edit Profile
+                    </button>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
